remove flex-end alignment from caniuse column (IE11 fix)

--- a/components/caniuse/caniuse.module.scss
+++ b/components/caniuse/caniuse.module.scss
@@ -215,7 +215,6 @@
   flex: 1 1 0;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: flex-end;
   min-width: 5rem;
   margin: 0 0.125rem;
 
